<resources>
    <string name="app_name">wings</string>
    <string name="checkout">CHECKOUT</string>
    <string name="default_text">default_text</string>
    <string name="try_again">Try Again</string>
    <string name="buy">BUY</string>
    <string name="ok">Ok</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total:</string>
    <string name="confirm">CONFIRM</string>
    <string name="sub_total">Sub Total:</string>
    <string name="price">Price</string>
    <string name="dimension">Dimention</string>
    <string name="price_unit">Price Unit</string>
    <string name="one">1</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="need_fill">Harus Diisi</string>
    <string name="password_more_than_8">Password lebih dari 8</string>


</resources>